# vscode-extension

./: .gitignore  COPYRIGHT  README.md  ThirdPartyNotices.txt  pyproject.toml
sema4ai/: .gitignore  .project  .vscodeignore  README.md  dev.py  package-lock.json  package.json  pyproject.toml
sema4ai-python-ls-core/: .project  .pydevproject  pyproject.toml
sema4ai-python-ls-core/src/: setup.py
sema4ai-python-ls-core/src/robocorp_ls_core/: robocop_wrapper.py
sema4ai-python-ls-core/src/sema4ai_ls_core/: basic.py  cache.py  callbacks.py  client_base.py  code_units.py  command_dispatcher.py  config.py  core_log.py  document_selection.py  ep_providers.py  ep_resolve_interpreter.py  http.py  load_ignored_dirs.py  lsp.py  options.py  ordered_set.py  pluginmanager.py  process.py  progress_report.py  protocols.py  python_ls.py  remote_fs_observer__main__.py  remote_fs_observer_impl.py  run_and_save_pid.py  run_with_env.py  subprocess_wrapper.py  system_mutex.py  timeouts.py  uris.py  watchdog_wrapper.py  workspace.py  yaml_wrapper.py
sema4ai-python-ls-core/src/sema4ai_ls_core/debug_adapter_core/: debug_adapter_threads.py
sema4ai-python-ls-core/src/sema4ai_ls_core/jsonrpc/: dispatchers.py  endpoint.py  exceptions.py  monitor.py  streams.py
sema4ai-python-ls-core/src/sema4ai_ls_core/unittest_tools/: __init__.py  cases_fixture.py  fixtures.py  language_server_client.py  monitor.py
sema4ai-python-ls-core/tests/: conftest.py  run_tests.py
sema4ai-python-ls-core/tests/sema4ai_ls_core_tests/: test_basic.py  test_dir_cache.py  test_document.py  test_instance_cache.py  test_log.py  test_lru.py  test_ordered_set.py  test_pluginmanager.py  test_python_ls.py  test_remote_fs_observer.py  test_run_with_env.py  test_system_mutex.py  test_timeouts.py  test_uris.py  test_watchdog_wrapper.py  test_workspace_memory_cache.py
sema4ai-python-ls-core/tests/sema4ai_ls_core_tests/pyls_jsonrpc_tests/: test_endpoint.py  test_streams.py
sema4ai/codegen/: codegen_package.py  commands.py  settings.py  views.py
sema4ai/devutils/: develop.bat  develop.sh
sema4ai/src/sema4ai_code/: __dev__main.py  __init__.py  __main__.py  _language_server_feedback.py  _language_server_login.py  _language_server_oauth2.py  _language_server_playwright.py  _language_server_pre_run_scripts.py  _language_server_profile.py  _language_server_vault.py  _lint.py  _oauth2.py  action_server.py  agent_cli.py  agent_server.py  commands.py  compute_launch.py  find_robot_yaml.py  holetree_manager.py  hover.py  options.py  path_operations.py  protocols.py  rcc.py  rcc_space_info.py  refresh_agent_spec_helper.py  resolve_interpreter.py  robocorp_config.py  robocorp_language_server.py  settings.py  subprocess_check_output_interactive.py  tools.py  workspace_manager.py
sema4ai/src/sema4ai_code/agents/: agent_spec.py  agent_spec_handler.py  agent_spec_provider.py  collect_agent_spec_diagnostics.py  gallery_actions.py  hover_agent_spec.py  list_actions_from_agent.py  tree_sitter_ast_utils.py
sema4ai/src/sema4ai_code/data/: data_server_connection.py  data_source_helper.py  result_set.py  sql_handling.py
sema4ai/src/sema4ai_code/inspector/: README.md  client.py  common.py  inspector__main__.py  inspector_api.py  inspector_language_server.py  inspector_server_manager.py
sema4ai/src/sema4ai_code/oauth2/: oauth_helper.py
sema4ai/src/sema4ai_code/playwright/: __playwright__main.py
sema4ai/src/sema4ai_code/plugins/: plugin_for_robotframework_ls.py  resolve_interpreter.py
sema4ai/src/sema4ai_code/robo/: actions_form_data.py  collect_actions.py  collect_actions_ast.py  launch_actions.py  launch_code_lens.py  launch_dev_task.py  lint_action.py  lint_ruff.py  list_dev_tasks.py
sema4ai/src/sema4ai_code/vendored_deps/: ls_protocols.py  oauth2_settings.py  url_callback_server.py  yaml_with_location.py
sema4ai/src/sema4ai_code_debug_adapter/: constants.py  debug_adapter_comm.py  launch_process.py
sema4ai/tests/: conftest.py  pytest.ini
sema4ai/tests/sema4ai_code_debug_adapter_tests/: fixtures.py  test_debug_adapter.py
sema4ai/tests/sema4ai_code_tests/: data_server_cli_wrapper.py  data_server_fixtures.py  fixtures.py  protocols.py  robocode_language_server_client.py  test_action_server_as_service.py  test_agent_server.py  test_check_output_interactive.py  test_cli.py  test_command_dispatch.py  test_compute_data_sources_state.py  test_compute_launch.py  test_data_sources_available.py  test_language_server_directly.py  test_oauth2.py  test_pre_run_scripts.py  test_prebuilt_environments.py  test_rcc.py  test_resolve_interpreter.py  test_tree_sitter.py  test_vscode_integration.py  test_work_items.py
sema4ai/tests/sema4ai_code_tests/agents/: test_agent_spec_analysis.py  test_hover_on_agent_spec.py  test_import_gallery_actions.py
sema4ai/tests/sema4ai_code_tests/inspector/: test_web_inspector.py  test_windows_inspector.py
sema4ai/tests/sema4ai_code_tests/robo/: test_code_lenses.py  test_list_actions.py  test_tasks_code_lenses.py
sema4ai/tests/sema4ai_code_tests/test_compute_data_sources_state/: missing_data_source_all.yml  missing_data_source_none.yml  missing_data_source_prediction.yml  missing_data_source_sqlite.yml
sema4ai/tests/sema4ai_code_tests/test_vscode_integration/: test_document_did_save_on_python_file_in_agent_action.yml  test_hover_agent_spec.yml  (+8 more)
sema4ai/vscode-client/snippets/: markdown.code-snippets
sema4ai/vscode-client/src/: actionServer.ts  activities.ts  agentCli.ts  agentServer.ts  ask.ts  channel.ts  clear.ts  common.ts  dataExtension.ts  debugger.ts  deepLink.ts  extension.ts  extensionCreateEnv.ts  files.ts  http.ts  locators.ts  mcp.ts  playwright.ts  protocols.ts  pythonExtIntegration.ts  rcc.ts  rccTerminal.ts  robocorpCommands.ts  robocorpSettings.ts  robocorpViews.ts  submitIssue.ts  tools.ts  vault.ts  views.ts  viewsAgents.ts  viewsCommon.ts  viewsLocators.ts  viewsResources.ts  viewsRobocorp.ts  viewsRobotContent.ts  viewsRobotSelectionTreeBase.ts  viewsRobots.ts  viewsSelection.ts  viewsWorkItems.ts
sema4ai/vscode-client/templates/: mcp_server_form.html  submit_issue.html
(+303 files in other folders)
