[tool.poetry]
name = "sema4ai-python-ls-core"
version = "0.0.1"
description = "Robocorp python language server core components"
authors = [
    "Fabio Zadrozny <fabio@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/Sema4AI/vscode-extension/"
license = "Apache-2.0"
packages = [
    {include = "sema4ai_ls_core", from = "src"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Editors",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Debuggers",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
fire = "*"

ruff = "^0.1.14"
mypy = "^1.1.1"
isort = { version = "^5.12.0", python = "^3.8" }
invoke = "^2.0"
tomlkit = "^0.11.8"
semver = "^3.0.0"

mock = "*"
pytest = "*"
pytest-regressions = "1.0.6"
pytest-xdist = "*"
pytest-timeout = "*"

types-invoke = "^2.0"
types-psutil = "^5.9"
types-mock = "*"
types-PyYAML = "*"
robocorp-log-pytest = "*"
types-docutils = "*"
types-Pillow = "^10.2.0"
types-pywin32 = "304.0.0.6"

[tool.mypy]
exclude = "_resources|libs|dap_schema|vendored"
mypy_path = "src:tests:src/sema4ai_ls_core/libs/watchdog_lib:src/sema4ai_ls_core/libs/yaml_lib:src/sema4ai_ls_core/libs/fsnotify_lib"

[tool.isort]
profile = "black"

[tool.ruff.lint]
ignore = [
    "E501", # Line-len.
    "F541", # f-string without placeholders. 
    "E731", # Use 'def' instead of lambda.
]

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_timeout.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

